# Nyx

./: CMakeLists.txt  CMakePresets.json  README.md
Source/Application/: CMakeLists.txt  Nyx.cpp
Source/Application/Constants/: Constants.cpp  Constants.h
Source/Application/Core/: Core.h
Source/Application/Core/Definitions/: BitwiseOperator.h  StdNames.h
Source/Application/Core/Engine/: Engine.cpp  Engine.h
Source/Application/Core/Managers/SceneManager/: SceneManager.h
Source/Application/Core/Physics/: Physics.h
Source/Application/Core/Renderer/: Renderer.h
Source/Application/Core/Services/Atmosphere/: AtmosphereSystem.h
Source/Application/Core/Services/Camera/: CameraService.h
Source/Application/Core/Services/CameraService/: CameraService.h
Source/Application/Core/Services/Editor/: Editor.h  EditorComponentUI.cpp  EditorComponentUI.h
Source/Application/Core/Services/Input/: InputDispatcher.cpp  InputDispatcher.h  InputEvent.h  InputQueue.h
Source/Application/Core/Services/Lighting/: LightingSystem.h
Source/Application/Core/Services/Managers/ComponentManager/: ComponentManager.h
Source/Application/Core/Services/Managers/EntityManager/: EntityManager.h
Source/Application/Core/Services/Managers/RenderManager/: OpenGL.cpp  OpenGL.h
Source/Application/Core/Services/Managers/ResourceManager/: ResourceManager.cpp  (+1 more)
Source/Application/Core/Services/MapService/: MapService.cpp  MapService.h
Source/Application/Core/Services/ResourceLocator/: ResourceLocator.h
Source/Application/Resource/Camera/: Camera.cpp  Camera.h
Source/Application/Resource/Components/: Components.h
Source/Application/Resource/Components/Atmosphere/: Atmosphere.h
Source/Application/Resource/Components/Camera/: Camera.h
Source/Application/Resource/Components/Effects/: Atmosphere.h
Source/Application/Resource/Components/Lighting/: Light.h
Source/Application/Resource/Components/Material/: Material.h
Source/Application/Resource/Components/Mesh/: Mesh.h
Source/Application/Resource/Components/Rigidbody/: Acceleration.h  Velocity.h
Source/Application/Resource/Components/Transform/: Position.h  Rotation.h  Scale.h  Transform.h
Source/Application/Resource/Material/: Material.h
Source/Application/Resource/Material/ShaderProgram/: ShaderProgram.h
Source/Application/Resource/Material/Texture/: Texture.cpp  Texture.h
Source/Application/Resource/Physics/: Physics.h
Source/Application/Resource/ShaderProgram/: ShaderProgram.h
Source/Application/Shaders/Atmosphere/: atmosphere.frag  atmosphere.vert
Source/Application/Shaders/Grid/: grid.frag  grid.vert
Source/Application/Shaders/Sphere/: sphere.frag  sphere.vert
Source/Application/Utils/ImGUIUtils/: ImGUIUtils.cpp  ImGUIUtils.h
Source/Application/Utils/MathUtils/: MathUtils.cpp  MathUtils.h
Source/Application/Utils/QTUtils/: QTUtils.h
Source/Application/Utils/QTUtils/Main/: MainWindow.cpp  MainWindow.h
Source/Application/Utils/QTUtils/Model/: Hierarchy.cpp  Hierarchy.h
Source/Application/Utils/QTUtils/Panel/: Inspector.cpp  Inspector.h  InspectorEditors.h
Source/Application/Utils/QTUtils/Proxy/: FileFilter.h
Source/Application/Utils/QTUtils/View/: ContentBrowser.cpp  ContentBrowser.h  SceneViewGL.cpp  SceneViewGL.h
Source/Application/Utils/ShaderUtils/: ShaderUtils.cpp  ShaderUtils.h
Source/Application/Utils/SpaceUtils/: SpaceUtils.cpp  SpaceUtils.h
Source/Application/Utils/TextureUtils/: TextureLoader.cpp  TextureLoader.h
Source/Application/Window/: Window.cpp  Window.h
(+6 files in other folders)
